[package]
name = "FlasterDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hyper = { version = "*" }
tokio = { version = "*", features = ["full"]}
reqwest = "0.11.13"
warp = "0.3.3"
sysinfo = "0.26.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3